# v3

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE_v1  README.md  README.uk.md  SECURITY.md  TEMPORARY.md  THIRD_PARTY_NOTICES.md  _diag_cal.py  calendar_overrides.json  calendar_overrides_v2.json  changelog.jsonl  config.json  config.local.json  copilot-instructions.md  dump.rdb  env_profile.py  pyproject.toml  requirements-broker.txt  requirements-test.txt  requirements-top.txt  requirements.txt  setup_v3.sh  system_current_overview.md  ui_live_candle_guide.md  v1_trading_time_and_fxcm_probe.md  v3_polling_b.py  ПОВНИЙ АУДИТ AS-IS + TO-BE ADR + ПЛАН.md  Цільова структура репозиторію.md
.claude/: .gitignore  settings.json  settings.local.json
.github/: copilot-instructions.md  dependabot.yml  role_spec_architect_v1.md  role_spec_bug_hunter_v2.md  role_spec_chart_ux_v1.md  role_spec_compliance_v1.md  role_spec_doc_keeper_v1.md  role_spec_doc_keeper_v2.md  role_spec_elevator_v1.md  role_spec_mentor_v1.md  role_spec_patch_master_v1.md  role_spec_rejector_v1.md  role_spec_signal_architect_v1.md  role_spec_smc_chief_strategist_v1.md  role_spec_trader_v1.md
Gates/: smoke_ui_v3.py
Old system Connector v2/: 01log.md  ERROR_WEB.md  UPDATE.md  app.js  chart_adapter.js  styles.css
aione_top/: README.md  __init__.py  __main__.py  actions.py  app.py  collectors.py  display.py
app/: composition.py  lifecycle.py  main.py  main_connector.py
core/: buckets.py  config_loader.py  derive.py  time_geom.py
cowork/: README.md  runner.py
data/: v3_agent_directives.json  v3_conversation.json  v3_learning_journal.json
docs/: ADR-0001 UnifiedDataStore.md  ADR-0002-derive-chain-from-m1.md  ADR-0003 Cold Start Hardening.md  ADR-0005-aione-top-monitoring.md  AMBITION_LADDER.md  Host Contract - Capability Sheet.md  PATCH-01-volume-zero-fix.md  ROADMAP_M3_M5.md  SYSTEM_MATURITY_LADDER.md  audit-smc-narrative-engine-LCn5F.txt  claude_project_instructions.md  config_reference.md  contracts.md  deep-research-report.md  guide_candles.md  index.md  redis_snapshot_design.md  system_current_overview.md  trader_coverage.md  ui spec.md  ui_api.md  ui_chart_research_notes.md  Аналітичний меморандум.md  ГЛИБОКИЙ АУДИТ АРЧІ  08_04.md
runtime/: obs_60s.py
tests/: conftest.py  test_adr0042_config_ssot.py  test_adr0042_delta_parity.py  test_api_policy_rails.py  test_api_security.py  test_api_security_s8.py  test_api_v3_auth.py  test_api_v3_bars_window.py  test_api_v3_endpoints.py  test_api_v3_integration.py  test_api_v3_killswitch.py  test_api_v3_smc_levels.py  test_api_v3_smc_zones.py  test_api_v3_tools.py  test_app_main_supervisor.py  test_candle_map.py  test_cascade_no_dupes.py  test_cowork_endpoints.py  test_cowork_event_watcher.py  test_cowork_runner.py  test_d1_derive.py  test_derive_calendar_pause_partial.py  test_hardcode_scan.py  test_htf_anchor_rail.py  test_htf_rebuild.py  test_htf_running_accumulator.py  test_htf_tail_sync.py  test_live_recover.py  test_m1_flat_bar_policy.py  test_m1_ingestion_ipc.py  test_m1_to_htf_preview.py  test_market_calendar.py  test_near_dedup_d1.py  test_ob_impulse_grace.py  test_ochi_wake_cards.py  test_overdue_cascade.py  test_pd_state.py  test_public_api_window_v1.py  test_qa_001.py  test_qa_002.py  (+44 more)
tmp_archi_april/: _kb_backup_20260407.json  archi_archive.tgz  conversation_seed.json  v3_agent_directives.json.bak.20260413_201421  v3_consciousness_stream.jsonl  v3_conversation.json
tools/: __init__.py  _check_freshness.py  _d1_audit.py  _diag_derive.py  _diag_derive_sim.py  _diag_dupes.py  _diag_m1_gaps.py  _fix_md_blanks.py  analyze_context.py  analyze_sweep_move.py  archi-nginx.conf  backfill_cascade.py  bundle-grep.sh  case_study_1_analysis.py  check_archi.py  check_archi.sh  check_archi2.py  check_config.py  check_directives.py  check_directives_state.py  check_stats_date.py  check_wake.py  clean_channel_beliefs.py  cleanup_d1_weekend.py  compare_m5_derived_vs_broker.py  dedup_derived_jsonl.py  dedup_jsonl.py  dedup_rebuild_m1m3.py  diag_derived.py  diag_ws_config.sh  fetch_m5_isolated.py  fetch_tf_backfill.py  fix_market_memory.py  live_candle.py  live_cascade_monitor.py  (+27 more)
(+701 files in other folders)
