[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-platform-v3"
version = "0.0.0"
description = "Trading Platform v3"
requires-python = ">=3.11"
dependencies = [
  "redis==5.0.1",
  "numpy>=1.26",
  "pandas>=3.0.2",
  "python-dotenv>=0.21,<1.0",
  "aiohttp>=3.9,<4.0",
]

[project.optional-dependencies]
fxcm = []
